--- a/src/Css/navigation.css
+++ b/src/Css/navigation.css
@@ -1,3 +1,7 @@
+.navigation {
+    height: 100rem;
+}
+
 .nav-bar__list {
     display: flex;
     flex-wrap: wrap;
@@ -39,7 +43,11 @@
     line-height: 15rem;
     text-align: center;
     font-style: italic;
-    animation: zoom-up 1s;
+    transition: 0.2s;
+}
+
+.title--animation {
+    animation: zoom-up ease 1s;
 }
 
 @keyframes zoom-up {
