--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+:root {
+  --text-primary-color: #7A7A7A;
+  --text-secondary-color: #333;
+  --text-white-color: white;
+  --text-title-color: #fbd784;
+  --background-card-color: #00616f;
+  --background-color: #0B1D26;
+}
+
 html {
   font-size: 12px;
+  color: var(--text-secondary-color);
 }
 
 body {
@@ -9,7 +19,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+
 }
 
 code {
