--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@
   --text-title-color: #fbd784;
   --background-card-color: #00616f;
   --background-color: #0B1D26;
+  --font-title-core: 'Satisfy', cursive;
+  --font-text-thin: 'Montserrat', sans-serif;
+  --font-text-normal: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  /* font-family: 'Dancing Script', cursive;
+  font-family: 'Gloria Hallelujah', cursive;
+  font-family: 'Qwitcher Grypen', cursive; */
 }
 
 html {
@@ -14,12 +22,9 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--font-text-normal);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
 }
 
 code {
